Fixed slider: removed little margin shift

--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -5,7 +5,7 @@
     overflow-y: auto;
     position: relative;
     height: 30vw;
-    width: 100vw;
+    width: 100%;
     &__slideshow {
         height: 28vw;
         width: 800vw;
